--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@
 .text-decoration{
     text-decoration: none;
 }
+/* .about-div li{
+    margin-left:10px;
+} */
+/* .except{
+    margin-left: 0px!important;
+} */
 
 
 
